# litra-driver

./: .gitignore  README.md  litra-demo.py  pyproject.toml  setup.cfg  setup.py  tox.ini
src/llgd/: __init__.py
src/llgd/cli/: __init__.py  __main__.py  cli.py
src/llgd/config/: __init__.py  llgd_config.py
src/llgd/lib/: __init__.py  llgd_lib.py
src/llgd/ui/: __init__.py  __main__.py
tests/: README.md
tests/llgd/cli/: test_cli_placeholder.py
tests/llgd/lib/: test_lib_placeholder.py
